build: use Bazel platforms instead of build flags.

--- a/toolchains/BUILD
+++ b/toolchains/BUILD
@@ -4,16 +4,11 @@ package(default_visibility = ["//visibility:public"])
 
 # Set of supported toolchain variants.
 toolchains = {
-    "i8088": ":i8088_toolchain",
-    "i8086": ":i8086_toolchain",
-    "i186": ":i186_toolchain",
-    "i286": ":i286_toolchain",
+    "8088": ":8088_toolchain",
+    "8086": ":8086_toolchain",
+    "186": ":186_toolchain",
+    "i286": ":286_toolchain",
 }
-
-cc_toolchain_suite(
-    name = "ia16_suite",
-    toolchains = toolchains,
-)
 
 filegroup(
     name = "gcc-ia16",
@@ -22,7 +17,7 @@ filegroup(
 
 # Define a specific toolchain for each supported architecture.
 [cc_toolchain(
-    name = "{}_toolchain".format(cpu),
+    name = "{}_cc_toolchain".format(cpu),
     all_files = ":gcc-ia16",
     ar_files = ":gcc-ia16",
     compiler_files = ":gcc-ia16",
@@ -31,15 +26,25 @@ filegroup(
     objcopy_files = ":gcc-ia16",
     strip_files = ":gcc-ia16",
     supports_param_files = 0,
-    toolchain_config = ":{}_toolchain_config".format(cpu),
-    toolchain_identifier = "{}-toolchain".format(cpu),
+    toolchain_config = ":{}_cc_toolchain_config".format(cpu),
+    toolchain_identifier = "{}-cc_toolchain".format(cpu),
 ) for cpu, name in toolchains.items()]
 
 # Define a toolchain configuration for each supported architecture. It will help
 # the toolchain config to set the correct -mtune and -march flags for the
 # selected CPU.
 [ia16_toolchain_config(
-    name = "{}_toolchain_config".format(cpu),
+    name = "{}_cc_toolchain_config".format(cpu),
     cpu = cpu,
-    toolchain_identifier = "{}-toolchain".format(cpu),
+    toolchain_identifier = "{}-cc_toolchain".format(cpu),
+) for cpu, name in toolchains.items()]
+
+[toolchain(
+    name = "{}_toolchain".format(cpu),
+    target_compatible_with = [
+        "//platforms:ia16",
+        "//platforms:{}".format(cpu),
+    ],
+    toolchain = "{}_cc_toolchain".format(cpu),
+    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
 ) for cpu, name in toolchains.items()]
