--- a/platforms/BUILD
+++ b/platforms/BUILD
@@ -1,42 +1,11 @@
 package(default_visibility = ["//visibility:public"])
 
-constraint_value(
-    name = "ia16",
-    constraint_setting = "@platforms//cpu:cpu",
-    visibility = ["//visibility:public"],
-)
-
-constraint_setting(name = "cpu_variant")
-
-constraint_value(
-    name = "8088",
-    constraint_setting = ":cpu_variant",
-    visibility = ["//visibility:public"],
-)
-
-constraint_value(
-    name = "8086",
-    constraint_setting = ":cpu_variant",
-    visibility = ["//visibility:public"],
-)
-
-constraint_value(
-    name = "80186",
-    constraint_setting = ":cpu_variant",
-    visibility = ["//visibility:public"],
-)
-
-constraint_value(
-    name = "80286",
-    constraint_setting = ":cpu_variant",
-    visibility = ["//visibility:public"],
-)
-
 platform(
-    name = "none_8088",
+    name = "8088-rev2",
     constraint_values = [
         "@platforms//os:none",
-        ":ia16",
-        ":8088",
+        "//platforms/cpu:ia16",
+        "//platforms/cpu:8088",
+        "//platforms/board:rev2",
     ],
 )
