build: create a kernel specific libc.
Changes the kind of generic libc to a kernel specific libc. The library
is not supposed to be called from outside the kernel implementation.

--- a/klib/BUILD
+++ b/klib/BUILD
@@ -1,7 +1,7 @@
 # Copyright (C) 2023 - Damien Dejean <dam.dejean@gmail.com>
 
 cc_library(
-    name = "c",
+    name = "klibc",
     srcs = glob([
         "*.h",
         "*.c",
