build: ensure board is fully linked.
Add the alwayslink attribute to the board support library to ensure that
the files it contains are embedded into the final binary even if no
symbols are referenced anywhere.

--- a/boards/BUILD
+++ b/boards/BUILD
@@ -25,6 +25,9 @@ cc_library(
         ":8088-rev2": ["8088-rev2"],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
+    # Required to ensure bootstrap and crt0 files are included even if their
+    # symbols are not referenced anywhere.
+    alwayslink = True,
 )
 
 filegroup(
