kernel: introduce a first test.
Create a first test suite for the "utils" library. It uses GTest to
implement the test suite and bazel test to run it.

The test suite can be run with:
bazel test --cxxopt=-std=c++14 --test_output=all //kernel/utils:utils_test

--- a/kernel/utils/BUILD
+++ b/kernel/utils/BUILD
@@ -10,5 +10,18 @@ cc_library(
         "ringbuffer.h",
     ],
     visibility = ["//visibility:public"],
-    deps = ["//libc:c"],
+    deps = select({
+        "@platforms//os:none": ["//libc:c"],
+        "@platforms//os:linux": [],
+    }),
+)
+
+cc_test(
+    name = "utils_test",
+    size = "small",
+    srcs = ["ringbuffer_test.cc"],
+    deps = [
+        ":utils",
+        "@com_google_googletest//:gtest_main",
+    ],
 )
