--- a/.bazelrc
+++ b/.bazelrc
@@ -2,19 +2,19 @@
 # for the host
 
 # Board revision 2 build configuration.
-build:8088-rev2_config --incompatible_enable_cc_toolchain_resolution
-build:8088-rev2_config --platforms=//platforms:8088-rev2
-build:8088-rev2_config --features=all_warnings
-build:8088-rev2_config --features=extra_warnings
-build:8088-rev2_config --features=treat_warnings_as_errors
-build:8088-rev2_config --features=tiny_memory_model
-build:8088-rev2_config --copt="-O2"
+build:8088-rev2 --incompatible_enable_cc_toolchain_resolution
+build:8088-rev2 --platforms=//platforms:8088-rev2
+build:8088-rev2 --features=all_warnings
+build:8088-rev2 --features=extra_warnings
+build:8088-rev2 --features=treat_warnings_as_errors
+build:8088-rev2 --features=tiny_memory_model
+build:8088-rev2 --copt="-O2"
 
 # Board revision 3 build configuration.
-build:8088-rev3_config --incompatible_enable_cc_toolchain_resolution
-build:8088-rev3_config --platforms=//platforms:8088-rev3
-build:8088-rev3_config --features=all_warnings
-build:8088-rev3_config --features=extra_warnings
-build:8088-rev3_config --features=treat_warnings_as_errors
-build:8088-rev3_config --features=tiny_memory_model
-build:8088-rev3_config --copt="-O2"
+build:8088-rev3 --incompatible_enable_cc_toolchain_resolution
+build:8088-rev3 --platforms=//platforms:8088-rev3
+build:8088-rev3 --features=all_warnings
+build:8088-rev3 --features=extra_warnings
+build:8088-rev3 --features=treat_warnings_as_errors
+build:8088-rev3 --features=tiny_memory_model
+build:8088-rev3 --copt="-O2"
