--- a/vboard/BUILD
+++ b/vboard/BUILD
@@ -3,4 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 go_binary(
     name = "vboard",
     srcs = ["vboard.go"],
+    deps = [
+        "//vboard/kvm",
+        "@org_golang_x_sys//unix",
+    ],
 )
