build: move to Bazel modules.
Transition from WORKSPACE to Bazel modules. It requires renaming the
dependencies and importing the correct rules for tests and Go.

--- a/kernel/utils/BUILD
+++ b/kernel/utils/BUILD
@@ -22,6 +22,6 @@ cc_test(
     srcs = ["ringbuffer_test.cc"],
     deps = [
         ":utils",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
