--- a/vboard/BUILD
+++ b/vboard/BUILD
@@ -2,7 +2,10 @@ load("@rules_go//go:def.bzl", "go_binary")
 
 go_binary(
     name = "vboard",
-    srcs = ["vboard.go"],
+    srcs = [
+        "io.go",
+        "vboard.go",
+    ],
     deps = [
         "//vboard/kvm",
         "@org_golang_x_sys//unix",
