build: modularize the drivers.
Split kernel sources to build the drivers as a library. It allows to
select only the required source set for a given board.

--- a/kernel/BUILD
+++ b/kernel/BUILD
@@ -1,47 +1,24 @@
 # Copyright (C) 2023 - Damien Dejean <dam.dejean@gmail.com>
 
-filegroup(
-    name = "srcs",
+cc_binary(
+    name = "kernel.bin",
     srcs = glob(
         [
             "*.S",
             "*.h",
             "*.c",
         ],
-        [
-            "p8251.*",
-            "pc16550.*",
-        ],
     ),
-)
-
-filegroup(
-    name = "drivers",
-    srcs = select({
-        "//kernel/boards:8088-rev2": [
-            "p8251.c",
-            "p8251.h",
-        ],
-        "//kernel/boards:8088-rev3": [
-            "pc16550.c",
-            "pc16550.h",
-        ],
-    }),
-)
-
-cc_binary(
-    name = "kernel.bin",
-    srcs = [
-        ":drivers",
-        ":srcs",
-    ],
     additional_linker_inputs = ["//kernel/boards:lds"],
     linkopts = [
         "-nostdlib",
         "-T $(location //kernel/boards:lds)",
     ],
     deps = [
+        "//kernel/arch",
         "//kernel/boards:board",
+        "//kernel/core",
+        "//kernel/drivers",
         "//kernel/utils",
         "//libc:c",
         "//third_party/async_xmodem",
