kernel: add board definition code for the PIC.
Adds the code required to let the board declare its devices. The board
specific code in kernel/boards declares the I/O devices, then they're
fetched by the drivers when they initialize. It allows to adapt the code
dynamically instead of using macros at compile time. The first device
declared is the PIC.

--- a/kernel/boards/BUILD
+++ b/kernel/boards/BUILD
@@ -21,21 +21,29 @@ config_setting(
 
 cc_library(
     name = "board",
-    srcs = select({
+    srcs = glob([
+        "*.h",
+        "*.c",
+    ]) + select({
         ":8088-rev2": ["//kernel/boards/8088-rev2:srcs"],
         ":8088-rev3": ["//kernel/boards/8088-rev3:srcs"],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    hdrs = select({
+    hdrs = glob([
+        "*.h",
+    ]) + select({
         ":8088-rev2": ["//kernel/boards/8088-rev2:hdrs"],
         ":8088-rev3": ["//kernel/boards/8088-rev3:hdrs"],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
-    includes = select({
+    includes = ["."] + select({
         ":8088-rev2": ["8088-rev2"],
         ":8088-rev3": ["8088-rev3"],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
+    deps = [
+        "//libc:c",
+    ],
     # Required to ensure bootstrap and crt0 files are included even if their
     # symbols are not referenced anywhere.
     alwayslink = True,
