kernel: add a list implementation.
Imports a list package implementation from the LittleKernel project and
add a very simple test set.

--- a/kernel/utils/BUILD
+++ b/kernel/utils/BUILD
@@ -3,10 +3,12 @@
 cc_library(
     name = "utils",
     srcs = [
+        "list.h",
         "ringbuffer.c",
         "ringbuffer.h",
     ],
     hdrs = [
+        "list.h",
         "ringbuffer.h",
     ],
     includes = ["."],
@@ -20,7 +22,10 @@ cc_library(
 cc_test(
     name = "utils_test",
     size = "small",
-    srcs = ["ringbuffer_test.cc"],
+    srcs = [
+        "list_test.cc",
+        "ringbuffer_test.cc",
+    ],
     deps = [
         ":utils",
         "@googletest//:gtest_main",
