kernel: introduce a block device system.
This CL introduces a block device abstraction and refactors the compact
flash driver to fit in.

--- a/kernel/core/BUILD
+++ b/kernel/core/BUILD
@@ -13,6 +13,7 @@ cc_library(
     deps = [
         "//kernel/arch",
         "//kernel/boards:board",
+        "//kernel/utils",
         "//libc:c",
     ],
 )
