kernel: add block layer tests.
Adds a set of unit test to validate the block layer interface and all
the checks it does.

--- a/kernel/core/BUILD
+++ b/kernel/core/BUILD
@@ -17,3 +17,17 @@ cc_library(
         "//libc:c",
     ],
 )
+
+cc_test(
+    name = "blkdev_test",
+    size = "small",
+    srcs = [
+        "blkdev.c",
+        "blkdev.h",
+        "blkdev_test.cc",
+    ],
+    deps = [
+        "//kernel/utils",
+        "@googletest//:gtest_main",
+    ],
+)
