--- a/kernel/arch/BUILD
+++ b/kernel/arch/BUILD
@@ -10,4 +10,5 @@ cc_library(
     hdrs = glob(["*.h"]),
     includes = ["."],
     visibility = ["//visibility:public"],
+    deps = ["//libc:c"],
 )
