kernel: move timer primitive to board/
Move the timer primitives as a board API since it is required early. It
will be needed to have a early {u,m}delay implementation available to
the drivers.

--- a/kernel/boards/8088-rev2/BUILD
+++ b/kernel/boards/8088-rev2/BUILD
@@ -14,6 +14,7 @@ cc_library(
     visibility = ["//kernel/boards:__pkg__"],
     deps = [
         "//kernel/boards:libboard",
+        "//kernel/boards/drivers:p8254",
         "//libc:c",
     ],
     # Required to ensure bootstrap and crt0 files are included even if their
