kernel: add early delay loop calibration.
Delay loop is required by some drivers, then it needs to be calibrated
and available after the board initialization.

--- a/kernel/boards/BUILD
+++ b/kernel/boards/BUILD
@@ -46,12 +46,15 @@ cc_library(
 cc_library(
     name = "libboard",
     srcs = [
+        "delay.c",
+        "delay.h",
         "devices.c",
         "devices.h",
         "timer.c",
         "timer.h",
     ],
     hdrs = [
+        "delay.h",
         "devices.h",
         "timer.h",
     ],
