kernel: move the interrupt management to board.
This CLs moves the interrupt controller to the board specific code, to
ensure it is initialized soon enough, and code dependencies are simpler.

--- a/kernel/boards/8088-rev2/BUILD
+++ b/kernel/boards/8088-rev2/BUILD
@@ -15,6 +15,7 @@ cc_library(
     deps = [
         "//kernel/boards:libboard",
         "//kernel/boards/drivers:p8254",
+        "//kernel/boards/drivers:p8259a",
         "//libc:c",
     ],
     # Required to ensure bootstrap and crt0 files are included even if their
