kernel: add open/read/write/close syscalls.
Add the minimal set of syscalls to manipulate files.

--- a/kernel/core/stubs/BUILD
+++ b/kernel/core/stubs/BUILD
@@ -2,7 +2,10 @@
 
 cc_library(
     name = "stubs",
-    srcs = glob(["*.h"]),
+    srcs = glob([
+        "*.h",
+        "*.c",
+    ]),
     includes = ["."],
     visibility = ["//kernel/core:__pkg__"],
 )
