--- a/.bazelrc
+++ b/.bazelrc
@@ -1,29 +1,30 @@
-# Use our custom-configured c++ toolchain for the target and standard toolchain
-# for the host
+# Copyright (C) 2024 - Damien Dejean <dam.dejean@gmail.com>
+
+# Common configuration.
+common --incompatible_enable_cc_toolchain_resolution
+common --copt="-O2"
 
 # Board revision 2 build configuration.
-build:8088-rev2 --incompatible_enable_cc_toolchain_resolution
 build:8088-rev2 --platforms=//platforms:8088-rev2
 build:8088-rev2 --features=all_warnings
 build:8088-rev2 --features=extra_warnings
 build:8088-rev2 --features=treat_warnings_as_errors
 build:8088-rev2 --features=tiny_memory_model
-build:8088-rev2 --copt="-O2"
 
 # Board revision 3 build configuration.
-build:8088-rev3 --incompatible_enable_cc_toolchain_resolution
 build:8088-rev3 --platforms=//platforms:8088-rev3
 build:8088-rev3 --features=all_warnings
 build:8088-rev3 --features=extra_warnings
 build:8088-rev3 --features=treat_warnings_as_errors
 build:8088-rev3 --features=tiny_memory_model
-build:8088-rev3 --copt="-O2"
 
 # Virtual board build configuration.
-build:vboard --incompatible_enable_cc_toolchain_resolution
 build:vboard --platforms=//platforms:8088-vboard
 build:vboard --features=all_warnings
 build:vboard --features=extra_warnings
 build:vboard --features=treat_warnings_as_errors
 build:vboard --features=tiny_memory_model
-build:vboard --copt="-O2"
+
+# Test configuration
+test --cxxopt="-std=c++14"
+test --test_output=all
