build: add a way to build applications.
Creates a set of basic rules to build applications that will run on the
kernel. The idea is to eventually build a set of applications, embed
them in an image that will be hosted on the Compact Flash.

--- a/platforms/BUILD
+++ b/platforms/BUILD
@@ -31,3 +31,12 @@ platform(
         "//platforms/board:vboard",
     ],
 )
+
+platform(
+    name = "i80k-8088",
+    constraint_values = [
+        "//platforms/os:i80k",
+        "//platforms/cpu:ia16",
+        "//platforms/cpu:8088",
+    ],
+)
