--- a/kernel/drivers/block/cfi/BUILD
+++ b/kernel/drivers/block/cfi/BUILD
@@ -1,6 +1,8 @@
 # Copyright (C) 2024 - Damien Dejean <dam.dejean@gmail.com>
 
-cc_library(
+load("//kernel/build:rules.bzl", "i80k_library")
+
+i80k_library(
     name = "cfi",
     srcs = ["cfi.c"],
     visibility = ["//kernel/drivers:__pkg__"],
@@ -9,7 +11,6 @@ cc_library(
         "//kernel/boards:board",
         "//kernel/core",
         "//kernel/drivers:libdriver",
-        "//libc:c",
     ],
     alwayslink = True,
 )
