--- a/apps/BUILD
+++ b/apps/BUILD
@@ -1,8 +1,8 @@
 # Copyright (C) 2024 - Damien Dejean <dam.dejean@gmail.com>
 
-load("//apps/build:rules.bzl", "i80k_binary")
+load("//apps/build:rules.bzl", "app_binary")
 
-i80k_binary(
+app_binary(
     name = "test",
     srcs = ["main.c"],
 )
